--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p class="mv_date">
           2023. 09. 20. 수. 13:00
         </p>
-        <a href="#" class="mv_btn">
+        <a href="#" class="mv_btn form_btn">
           <span class="hover"></span>
           <span class="text">
             HRevolution <span class="sub">참가신청</span>
@@ -58,7 +58,7 @@
         <div class="video_fixed">
           <div class="videos_wrap">
             <!-- <video id="story_vid_0" src="https://hlab.im/hubfs/2023%20HREVOLUTION/story_bg1.mp4" playsinline muted loop></video> -->
-            <video id="story_vid_1" src="https://hlab.im/hubfs/2023%20HREVOLUTION/story_bg2.mp4" playsinline muted loop></video>
+            <video id="story_vid_1" src="https://hlab.im/hubfs/2023%20HREVOLUTION/story_bg_.mp4" playsinline muted loop></video>
           </div>
         </div>
         <div class="title_area">
@@ -146,7 +146,6 @@
           <div class="swiper-container">
             <div class="swiper-wrapper">
               <div class="swiper-slide slide1">
-                <div class="img_area"></div>
                 <div class="text_area">
                   <p class="slide_title">
                     다가올 HR의<br>
@@ -159,7 +158,6 @@
                 </div>
               </div>
               <div class="swiper-slide slide2">
-                <div class="img_area"></div>
                 <div class="text_area">
                   <p class="slide_title">
                     다른 회사에선 HR을<br>
@@ -173,7 +171,6 @@
                 </div>
               </div>
               <div class="swiper-slide slide3">
-                <div class="img_area"></div>
                 <div class="text_area">
                   <p class="slide_title">
                     실무에 바로 적용할<br>
@@ -186,7 +183,6 @@
                 </div>
               </div>
               <div class="swiper-slide slide4">
-                <div class="img_area"></div>
                 <div class="text_area">
                   <p class="slide_title">
                     사람 뽑는게<br>
@@ -201,7 +197,6 @@
                 </div>
               </div>
               <div class="swiper-slide slide5">
-                <div class="img_area"></div>
                 <div class="text_area">
                   <p class="slide_title">
                     기업의 성장을 위한<br>
@@ -239,122 +234,110 @@
             <div class="custom_cursor"></div>
             <div class="table_item session_item">
               <span class="num">01</span>
-              <p class="table_title">RE : MOVE 틀을 깨고 나아가다</p>
-              <p class="table_time">
-                13:00 - 13:55
-                <span>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="1" height="12" viewBox="0 0 1 12" fill="none">
-                    <rect width="1" height="12" fill="#626262"/>
-                  </svg>
-                </span>
-                <span class="min">55min</span>
-              </p>
+              <div class="table_title_wrap">
+                <p class="table_stitle">Keynote #1</p>
+                <p class="table_title">HR Tech, 틀을 깨고 나아가다</p>
+              </div>
+              <div class="speaker_wrap">
+                <p class="speaker_title">Speaker</p>
+                <p class="speaker_name">마이다스인 김재승 외 2명</p>
+              </div>
             </div>
             <div class="table_item break">
               <span class="num">-</span>
               <p class="table_title">Break Time</p>
-              <p class="table_time">
-                13:55 - 14:35
-                <span>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="1" height="12" viewBox="0 0 1 12" fill="none">
-                    <rect width="1" height="12" fill="#626262"/>
-                  </svg>
-                </span>
-                <span class="min">40min</span>
-              </p>
             </div>
             <div class="table_item session_item">
               <span class="num">02</span>
-              <p class="table_title">The Unchangeable</p>
-              <p class="table_time">
-                14:35 - 15:05
-                <span>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="1" height="12" viewBox="0 0 1 12" fill="none">
-                    <rect width="1" height="12" fill="#626262"/>
-                  </svg>
-                </span>
-                <span class="min">30min</span>
-              </p>
+              <div class="table_title_wrap">
+                <p class="table_stitle">MIDAS Originals</p>
+                <p class="table_title">‘사람을 봅니다’ 비긴즈</p>
+              </div>
+              <div class="speaker_wrap">
+                <p class="speaker_title">Speaker</p>
+                <p class="speaker_name">마이다스 NC센터</p>
+              </div>
             </div>
             <div class="table_item session_item">
               <span class="num">03</span>
-              <p class="table_title">Beyond OKR</p>
-              <p class="table_time">
-                15:05 - 15:40
-                <span>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="1" height="12" viewBox="0 0 1 12" fill="none">
-                    <rect width="1" height="12" fill="#626262"/>
-                  </svg>
-                </span>
-                <span class="min">35min</span>
-              </p>
+              <div class="table_title_wrap">
+                <p class="table_stitle">MIDAS Originals</p>
+                <p class="table_title">Beyond OKR, 성과 준비 완료</p>
+              </div>
+              <div class="speaker_wrap">
+                <p class="speaker_title">Speaker</p>
+                <p class="speaker_name">마이다스 자인연구소</p>
+              </div>
             </div>
             <div class="table_item break">
               <span class="num">-</span>
               <p class="table_title">Break Time</p>
-              <p class="table_time">
-                15:40 - 16:00
-                <span>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="1" height="12" viewBox="0 0 1 12" fill="none">
-                    <rect width="1" height="12" fill="#626262"/>
-                  </svg>
-                </span>
-                <span class="min">20min</span>
-              </p>
             </div>
             <div class="table_item session_item">
               <span class="num">04</span>
-              <p class="table_title">Johnson & Johnson의 HR 혁명</p>
-              <p class="table_time">
-                16:00 - 16:40
-                <span>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="1" height="12" viewBox="0 0 1 12" fill="none">
-                    <rect width="1" height="12" fill="#626262"/>
-                  </svg>
-                </span>
-                <span class="min">40min</span>
-              </p>
+              <div class="table_title_wrap">
+                <p class="table_stitle">Keynote #2</p>
+                <p class="table_title">Johnson & Johnson의 HR 혁명</p>
+              </div>
+              <div class="speaker_wrap">
+                <p class="speaker_title">Speaker</p>
+                <p class="speaker_name">
+                  존슨앤존슨 컨수머 채병권
+                  <span>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="1" height="12" viewBox="0 0 1 12" fill="none">
+                      <rect width="1" height="12" fill="#626262"/>
+                    </svg>
+                  </span>
+                  <em>북아시아 HR 총괄</em>
+                </p>
+              </div>
             </div>
             <div class="table_item session_item last on">
               <span class="num">05</span>
-              <p class="table_title">일이란 무엇인가?</p>
-              <p class="table_time">
-                16:40 - 17:30
-                <span>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="1" height="12" viewBox="0 0 1 12" fill="none">
-                    <rect width="1" height="12" fill="#626262"/>
-                  </svg>
-                </span>
-                <span class="min">50min</span>
-              </p>
+              <div class="table_title_wrap">
+                <p class="table_stitle">Special Talk</p>
+                <p class="table_title">일이란 무엇인가?</p>
+              </div>
+              <div class="speaker_wrap">
+                <p class="speaker_title">Speaker</p>
+                <p class="speaker_name">
+                  삼성전자 고동진
+                  <span>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="1" height="12" viewBox="0 0 1 12" fill="none">
+                      <rect width="1" height="12" fill="#626262"/>
+                    </svg>
+                  </span>
+                  <em>전 IM부문장, 대표이사 사장</em>
+                </p>
+              </div>
             </div>
           </div>
           <div class="img_area">
             <ul class="img_list">
               <li class="img_item img_item1">
                 <p class="box_img_title">Keynote #1</p>
-                <p class="img_title">RE:MOVE 틀을 깨고 나아가다.</p>
+                <p class="img_title">HR Tech, 틀을 깨고 나아가다.</p>
                 <p class="img_text">
                   멈춘것 같던 세상이 빠르게 변화하고 있습니다. 기존 HR 문법이 통하지 않는 지금, 마이다스는 HR TECH를 통해 채용과 성과관리의 새로운 방향성을 제시합니다.
                 </p>
               </li>
               <li class="img_item img_item2">
                 <p class="box_img_title">MIDAS Originals</p>
-                <p class="img_title">The Unchangeable</p>
+                <p class="img_title">‘사람을 봅니다’ 비긴즈</p>
                 <p class="img_text">
                   서류, 인적성, 면접 등.. 우리는 지금까지 성과와 무관한 채용을 하고 있을지도 모릅니다. 기존 채용방식의 틀을 깨고 이제는 입체적인 역량 정보로 지원자의 미래 가능성을 확인할 수 있습니다.
                 </p>
               </li>
               <li class="img_item img_item3">
                 <p class="box_img_title">MIDAS Originals</p>
-                <p class="img_title">Beyond OKR</p>
+                <p class="img_title">Beyond OKR, 성과 준비 완료</p>
                 <p class="img_text">
                   OKR을 성공적으로 반영하기 위해 고민했던 HR 담당자들의 현실적인 이야기를 들려드립니다. OKR을 넘어 기업의 지속/고속 성장을 위한 새로운 성과 관리 방법과 노하우를 공개합니다.
                 </p>
               </li>
               <li class="img_item img_item4">
                 <p class="box_img_title">Keynote #2</p>
-                <p class="img_title">JOHNSON & JOHNSON의 HR 혁명</p>
+                <p class="img_title">Johnson & Johnson의 HR 혁명</p>
                 <p class="img_text">
                   의료 기업에서 토탈 헬스케어 기업으로 변화 중인 존슨앤존슨의 HR 철학과 전략을 소개합니다. 디지털 HR 전환을 바탕으로 글로벌 성장을 지속해오고 있는 존슨앤존슨의 성공적인 혁신을 알아봅시다.
                 </p>
@@ -381,7 +364,7 @@
             <p class="event_text">
               마이다스인 <strong>링크드인</strong> 게시물에 <strong>주변 HR 동료들을 태그하고 응원의 댓글</strong>을 남겨주세요. 추첨을 통해 50명에게 배민 1만원권을 드립니다.
             </p>
-            <a href="#" class="event_link" target="_blank">
+            <a href="https://www.linkedin.com/feed/update/urn:li:activity:7100383098839724032" class="event_link" target="_blank">
               이벤트 참여하기
               <span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
@@ -411,7 +394,7 @@
               현장 부스존에는 HR 담당자들의 실무 고민을 해결해줄 <strong>다양한 툴킷 자료와 도서</strong>들이 준비되어 있습니다. 실무에 바로 적용할 아이디어를 얻어가세요.
             </p>
             <div class="event_img">
-              <img src="https://hlab.im/hubfs/2023%20HREVOLUTION/event_img3_.png" alt="이벤트 이미지">
+              <img src="https://hlab.im/hubfs/2023%20HREVOLUTION/event_img3__.png" alt="이벤트 이미지">
             </div>
           </li>
         </ul>
@@ -420,7 +403,7 @@
     <section class="information">
       <div class="inform_top">
         <div class="img">
-          <img src="https://hlab.im/hubfs/2023%20HREVOLUTION/inform_img.svg" alt="information image">
+          <video src="https://hlab.im/hubfs/2023%20HREVOLUTION/02_neon%20line_linear%202.mp4" playsinline muted autoplay loop></video>
         </div>
         <div class="inner">
           <p class="title">Information</p>
@@ -454,7 +437,7 @@
               <p class="li_text">HR 인사담당자, 경영진 및 임원</p>
             </li>
           </ul>
-          <a href="#" class="inform_btn" target="_blank">
+          <a href="https://map.naver.com/p/directions/-/14141229.8049131,4504301.3145545,%EB%8D%94%EC%BC%80%EC%9D%B4%ED%98%B8%ED%85%94%EC%84%9C%EC%9A%B8,12101938,PLACE_POI/-/transit?c=15.00,0,0,0,dh" class="inform_btn" target="_blank">
             <span class="hover"></span>
             <span class="text">
               교통정보 더보기
@@ -780,6 +763,9 @@
     <section class="footer">
       <footer id="footer">
         <div class="inner">
+          <div class="footer_logo">
+            <img src="https://hlab.im/hubfs/2023%20HREVOLUTION/footer_logo_text.svg" alt="H.LAB">
+          </div>
             <div class="box_term">
               <a class="btn_term" href="https://hlab.im/terms" target="_blank">개인정보처리방침</a>
               <a class="btn_term" href="https://hlab.im/service" target="_blank">서비스 이용약관</a>
@@ -787,11 +773,8 @@
             </div>
             <div class="info_company">
               <div class="list_info">
-                <span>(주)자인원</span>
-                <span>대표 : 이형우</span>
-                <span>사업자등록번호 : 170-88-01418</span>
+                H.LAB 더 나은 판단을 위한 HR 플랫폼
               </div>
-              <span>고객문의 : inhr_mkt@jainwon.com</span>
               <span>©JAINWON Co., Ltd.</span>
             </div>
         </div>
