--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       </p>
     </div>
     <section class="main_visual full_height scroll-section anchor-top" id="scroll-section-0">
+      <div class="cover"></div>
       <div class="fixed_area">
         <div class="scroll_btn">
           <i><img src="https://hlab.im/hubfs/2023%20HREVOLUTION/mv_scroll_icon.svg" alt="icon"></i>
@@ -84,7 +85,7 @@
             </span>
           </a>
         </div>
-    </div>
+      </div>
     </section>
     <section class="story full_height scroll-section" id="scroll-section-1">
       <div class="inner">
