--- a/index.html
+++ b/index.html
@@ -763,10 +763,10 @@
       <div class="inform_top">
         <div class="img">
           <video class="video_pc"  playsinline muted autoplay loop>
-            <source src="https://hlab.im/hubfs/2023%20HREVOLUTION/02_neon%20line_linear%202.mp4"/>
+            <source src="https://hlab.im/hubfs/2023%20HREVOLUTION/web%20banner%2001.mp4"/>
           </video>
           <video class="video_m" playsinline muted autoplay loop>
-            <source src="https://hlab.im/hubfs/2023%20HREVOLUTION/02_neon%20line_linear%203.mp4" />
+            <source src="https://hlab.im/hubfs/2023%20HREVOLUTION/web%20banner%2002.mp4" />
           </video>
         </div>
         <div class="inner">
