--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
         <div class="video_area">
           <div class="video_overlay"></div>
-          <video id="mv_video_loop" playsinline muted loop>
+          <video id="mv_video_loop" playsinline muted loop preload="none">
             <source src="https://hlab.im/hubfs/2023%20HREVOLUTION/TEST/44444444444444444.mp4" />
           </video>
           <video id="mv_video_intro" playsinline muted>
@@ -441,7 +441,7 @@
           <li class="m_item break">Break Time</li>
           <li class="m_item" data-aos="fade-up">
             <div class="m_img">
-              <img src="https://hlab.im/hubfs/2023%20HREVOLUTION/session_img_m_4.png" alt="session image">
+              <img src="https://hlab.im/hubfs/2023%20HREVOLUTION/session_img_m_4_.png" alt="session image">
             </div>
             <p class="m_key">Keynote #2</p>
             <p class="m_title">글로벌 Healthcare의 HR 혁신 여정</p>
@@ -646,7 +646,7 @@
             </div>
             <div class="st_bot">
               <div class="st_img_area">
-                <img src="https://hlab.im/hubfs/2023%20HREVOLUTION/session_img_t_4.png" alt="Agenda Image">
+                <img src="https://hlab.im/hubfs/2023%20HREVOLUTION/session_img_t_4_.png" alt="Agenda Image">
               </div>
               <div class="st_text_area">
                 <div class="st_box">Keynote #2</div>
@@ -1239,6 +1239,7 @@
     }
   </script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+  <script src="js/smooth-scrollbar.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="js/main.js"></script>
   <script>
