--- a/index.html
+++ b/index.html
@@ -1178,7 +1178,7 @@
       </dl>
       <dl>
         <dt>개인정보를 제공받는 자의 개인정보 이용 목적</dt>
-        <dd>본인 확인 및 HR 솔루션 소개서 및 상담, 세미나 신청 처리</dd>
+        <dd>본인 확인 및 HRevolution 컨퍼런스 신청 처리</dd>
       </dl>
       <dl>
         <dt>수집하는 개인정보 항목</dt>
@@ -1188,6 +1188,10 @@
         <dt>개인정보 보유 및 이용기간</dt>
         <dd>1) 회사는 법령에 따른 개인정보 보유∙이용기간 또는 정보주체로부터 개인정보를 수집시에 동의받은 개인정보 보유∙이용기간 내에서 개인정보를 처리하며, 개인정보의 처리 목적이 달성된 후에는 해당 정보를 지체 없이 파기합니다.</dd>
         <dd>2) 수집한 개인정보는 1년간 보관하며, 이후 해당 정보를 지체 없이 파기합니다. 단, 통신비밀보호법의 규정에 의하여 정보주체의 인터넷 로그기록 및 접속지 추적자료는 3개월간 별도 보관합니다</dd>
+      </dl>
+      <dl>
+        <dt>동의 거부 시 불이익</dt>
+        <dd>귀하는 개인정보 제공에 대한 동의를 거부할 권리가 있습니다. 다만 동의하지 않을 경우 (주) 자인원에서 제공하는 HRevolution 컨퍼런스 참석이 어려울 수 있습니다.</dd>
       </dl>
     </div>
   </div>
